--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
 name = "kiwi-os"
 version = "0.0.1"
+authors = ["Miguel Villa Floran <miguel.villafloran@gmail.com>"]
 edition = "2021"
-publish = false
 
-max_width = 80
-tab_spaces = 2
-hard_tabs = false
 
 [build-dependencies]
 nasm = "0.2.1"
